--- a/pom.xml
+++ b/pom.xml
@@ -37,10 +37,10 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.1</version>
+          <version>3.10.1</version>
           <configuration>
-            <source>19</source>
-            <target>19</target>
+            <source>8</source>
+            <target>8</target>
             <compilerArgs>
               <arg>-Xlint:all</arg>
             </compilerArgs>
@@ -50,47 +50,12 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.0.0-M5</version>
           <configuration>
-            <argLine>--enable-preview</argLine>
           </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
 
     <plugins>
-      <plugin>
-        <groupId>io.github.git-commit-id</groupId>
-        <artifactId>git-commit-id-maven-plugin</artifactId>
-        <version>5.0.0</version>
-        <executions>
-          <execution>
-            <id>get-the-git-infos</id>
-            <goals>
-              <goal>revision</goal>
-            </goals>
-            <phase>validate</phase>
-          </execution>
-          <execution>
-            <id>validate-the-git-infos</id>
-            <goals>
-              <goal>validateRevision</goal>
-            </goals>
-            <phase>package</phase>
-          </execution>
-        </executions>
-        <configuration>
-          <generateGitPropertiesFile>true</generateGitPropertiesFile>
-          <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties
-          </generateGitPropertiesFilename>
-          <dateFormat>yyyy-MM-dd</dateFormat>
-          <includeOnlyProperties>
-            <includeOnlyProperty>^git.build.(time|version)$</includeOnlyProperty>
-            <includeOnlyProperty>^git.commit.id.(abbrev|full)$</includeOnlyProperty>
-          </includeOnlyProperties>
-          <commitIdGenerationMode>full</commitIdGenerationMode>
-          <skipPoms>false</skipPoms>
-          <verbose>true</verbose>
-        </configuration>
-      </plugin>
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -99,7 +64,6 @@
         <configuration>
           <archive>
             <manifestEntries>
-              <SCM-Revision>${git.build.time}_${git.commit.id.abbrev}</SCM-Revision>
             </manifestEntries>
           </archive>
         </configuration>
@@ -129,7 +93,7 @@
           </reportSet>
         </reportSets>
         <configuration>
-          <additionalOptions>-source 19 --enable-preview -Xdoclint:all</additionalOptions>
+          <additionalOptions>-Xdoclint:all</additionalOptions>
         </configuration>
       </plugin>
     </plugins>
