--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,5 +38,5 @@ jobs:
       - name: Run Test 1
         run: java -cp out ch.randelshofer.fastdoubleparserdemo.Main
       - name: Run Test 2
-        run: java -cp out ch.randelshofer.fastdoubleparserdemo.Main data/canada.txt
+        run: java -cp out ch.randelshofer.fastdoubleparserdemo.Main FastDoubleParserDemo/data/canada.txt
 ...
